<resources>
    <string name="app_name">MySeries</string>
    <string name="interests">Interests</string>
    <string name="watching">Watching</string>
    <string name="completed">Completed</string>
    <string name="about">About</string>
    <string name="add">+</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="season">Season</string>
    <string name="seasons">Seasons</string>
    <string name="episode">Episode</string>
    <string name="episodes">Episodes</string>
    <string name="send">Send</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="textAbout">The MySeries is an application developed in the Mobile Programming class of Professor Alexandre Feitosa, the application aims to help the user to have a control of the series that has interest, which he attended and the series that he finished.</string>
    <string name="authorship">Developed by Caroline Adão</string>

    <string name="name_empty">The name is empty</string>
    <string name="episode_empty">The episode field is empty</string>
    <string name="season_empty">The season field is empty</string>

    <string name="invalid_season">The season field is invalid</string>
    <string name="invalid_episode">The episode field is invalid</string>

    <string name="edit_category">Edit Category</string>
    <string name="new_category">New Category</string>

    <string name="category_exists">The category already exists!</string>
    <string name="category_used">Tha category is being used!</string>
    <string name="empty_categories">No categories created!</string>

    <string name="edit_serie">Edit Serie</string>
    <string name="new_serie">New Serie</string>

    <string name="serie_exists">The serie already exists!</string>
    <string name="want_delete">Do you want to delete?</string>

    <string name="ok">Ok</string>
    <string name="warning">Warning</string>
    <string name="confirmation">Confirmation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="action">Action</string>
    <string name="romance">Romance</string>
    <string name="drama">Drama</string>
    <string name="horror">Horror</string>

    <string name="status">Status</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="series">Series</string>
    <string name="background_color">Background Color</string>
    <string name="purple">Purple</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="dark_theme">Dark Theme?</string>
    <string name="theme_dark">Dark Theme</string>

</resources>
