<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:orientation="horizontal"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_serie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="?attr/textcolor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/season_serie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/season"
            android:textColor="?attr/textcolor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/category_serie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="?attr/textcolor"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="right|center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_status"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:src="@drawable/eye" />

        <TextView
            android:id="@+id/status_serie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/status"
            android:textColor="?attr/textcolor"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>